add_library(Elements STATIC "")
target_sources(Elements
	PRIVATE
		Element.cpp
	PUBLIC
		${CMAKE_CURRENT_SOURCE_DIR}/Element.hpp
)
target_link_libraries(Elements
	PUBLIC
		EscapableRawText
		Foreign
		HTML_types
		Normal
		RawText
		Void
)
add_subdirectory(EscapableRawText)
add_subdirectory(Foreign)
add_subdirectory(Normal)
add_subdirectory(RawText)
add_subdirectory(Void)