add_library(Normal STATIC "")
target_sources(Normal
	PRIVATE
		A.cpp
		Abbr.cpp
		Address.cpp
		Article.cpp
		Aside.cpp
		Audio.cpp
		B.cpp
		Bdi.cpp
		Bdo.cpp
		BlockQuote.cpp
		Body.cpp
		Button.cpp
		Canvas.cpp
		Caption.cpp
		Cite.cpp
		Code.cpp
		ColGroup.cpp
		Data.cpp
		DataList.cpp
		Dd.cpp
		Del.cpp
		Dfn.cpp
		Div.cpp
		Dl.cpp
		Dt.cpp
		Em.cpp
		FieldSet.cpp
		FigCaption.cpp
		Figure.cpp
		Footer.cpp
		Form.cpp
		H1.cpp
		H2.cpp
		H3.cpp
		H4.cpp
		H5.cpp
		H6.cpp
		Head.cpp
		Header.cpp
		HTML.cpp
		I.cpp
		IFrame.cpp
		Ins.cpp
		Kbd.cpp
		Label.cpp
		Legend.cpp
		Li.cpp
		Main.cpp
		Mark.cpp
		Meter.cpp
		Nav.cpp
		Normal.cpp
		NoScript.cpp
		Object.cpp
		Ol.cpp
		OptGroup.cpp
		Option.cpp
		Output.cpp
		P.cpp
		Pre.cpp
		Progress.cpp
		Q.cpp
		Rb.cpp
		Rp.cpp
		Rt.cpp
		Rtc.cpp
		Ruby.cpp
		S.cpp
		Samp.cpp
		Section.cpp
		Select.cpp
		Small.cpp
		Span.cpp
		Strong.cpp
		Sub.cpp
		Sup.cpp
		Table.cpp
		TBody.cpp
		Td.cpp
		Template.cpp
		TFoot.cpp
		Th.cpp
		THead.cpp
		Time.cpp
		Tr.cpp
		U.cpp
		Ul.cpp
		Var.cpp
		Video.cpp
	PUBLIC
		${CMAKE_CURRENT_SOURCE_DIR}/A.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Abbr.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Address.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Article.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Aside.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Audio.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/B.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Bdi.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Bdo.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/BlockQuote.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Body.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Button.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Canvas.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Caption.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Cite.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Code.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/ColGroup.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Data.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/DataList.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Dd.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Del.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Dfn.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Div.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Dl.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Dt.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Em.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/FieldSet.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/FigCaption.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Figure.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Footer.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Form.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/H1.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/H2.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/H3.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/H4.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/H5.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/H6.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Head.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Header.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTML.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/I.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/IFrame.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Ins.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Kbd.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Label.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Legend.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Li.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Main.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Mark.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Meter.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Nav.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Normal.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/NoScript.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Object.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Ol.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/OptGroup.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Option.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Output.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/P.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Pre.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Progress.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Q.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Rb.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Rp.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Rt.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Rtc.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Ruby.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/S.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Samp.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Section.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Select.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Small.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Span.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Strong.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Sub.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Sup.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Table.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/TBody.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Td.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Template.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/TFoot.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Th.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/THead.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Time.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Tr.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/U.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Ul.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Var.hpp
		${CMAKE_CURRENT_SOURCE_DIR}/Video.hpp
)
target_link_libraries(Normal
	PUBLIC
		HTML_types
)