add_library(normal_test INTERFACE)

target_sources(normal_test
	INTERFACE
		${CMAKE_CURRENT_SOURCE_DIR}/A_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Abbr_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Address_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Article_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Aside_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Audio_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/B_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Bdi_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Bdo_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/BlockQuote_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Body_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Button_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Canvas_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Caption_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Cite_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Code_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/ColGroup_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Data_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/DataList_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Dd_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Del_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Dfn_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Div_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Dl_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Dt_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Em_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/FieldSet_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/FigCaption_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Figure_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Footer_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Form_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/H1_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/H2_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/H3_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/H4_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/H5_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/H6_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Head_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Header_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/HTML_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/I_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/IFrame_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Ins_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Kbd_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Label_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Legend_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Li_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Main_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Mark_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Meter_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Nav_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Normal_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/NoScript_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Object_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Ol_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/OptGroup_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Option_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Output_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/P_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Pre_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Progress_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Q_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Rb_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Rp_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Rt_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Rtc_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Ruby_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/S_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Samp_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Section_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Select_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Small_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Span_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Strong_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Sub_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Sup_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Table_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/TBody_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Td_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Template_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/TFoot_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Th_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/THead_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Time_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Tr_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/U_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Ul_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Var_test.cpp
		${CMAKE_CURRENT_SOURCE_DIR}/Video_test.cpp
)
target_link_libraries(normal_test
	INTERFACE
		normal
)
